@@ -171,6 +171,13 @@ DLNALocalizationRequired = false
 # ByteToTimeseekRewindSeconds is used for fine tuning, so the default is 0
 # ByteToTimeseekRewindSeconds=0
 
+# ThumbnailAsResource: Set to true if the renderer requires the use of the
+# "res" element instead of the "albumArtURI" element for thumbnails in DLNA
+# reponses. E.g. Samsung 2012 models do not recognize the "albumArtURI"
+# element.
+# Default value is false, i.e. use "albumArtURI"
+# ThumbnailAsResource = 
+	 
 #-----------------------------------------------------------------------------
 # MEDIAINFO
 #
