@@ -32,6 +32,10 @@ Image=true
 SeekByTime=false
 TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
+
+# Samsung 2012 models do not recognize the "albumArtURI" element, use "res" instead
+ThumbnailAsResource=true 
+
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
 MuxDTSToMpeg=true
